[workspace]
members = [
    "solana_cpu_listener",
    "hello-gpu",
    "solana-ta-stack/pool_indexer"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", branch = "main" } 