[package]
name = "solana-cpu-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "full"] }
tokio-tungstenite = "0.27.0"
csv = "1.3"
thiserror = "2.0.12"
solana-client = "2.0"

[dev-dependencies]
httpmock = "0.7"
