[package]
name = "solana_cpu_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
env_logger = "0.11"
csv = "1.3"
crossbeam = "0.8"
solana-sdk = "2.0"
clap = { workspace = true, features = ["derive"] }
cust = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
