[package]
name = "pool_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
cust = { workspace = true }

# GPU support
hello-gpu = { path = "../../hello-gpu" }

# Solana specific
solana-client = "2.0.0"
solana-sdk = "2.0.0"

# WebSocket and async
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Data handling
csv = "1.1"
crossbeam = "0.8"
rayon = "1.10"

# Logging
env_logger = "0.9.0"
log = "0.4.14"

# Pyth SDK
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.10.5"
bytemuck = "1.14"
